--- a/src/Components/Experinces/experiences.module.scss
+++ b/src/Components/Experinces/experiences.module.scss
@@ -15,6 +15,13 @@
       text-align: left;
     }
 
+    &-text {
+      margin-top: 5px;
+      span {
+        font-weight: bold;
+      }
+    }
+
     &-status {
       color: red;
     }
