--- a/src/Components/Educations/educations.module.scss
+++ b/src/Components/Educations/educations.module.scss
@@ -15,11 +15,18 @@
       text-align: left;
     }
 
-    &-school {
+    &-text {
+      margin-top: 5px;
+      span {
+        font-weight: bold;
+      }
+    }
+
+    &-status {
       color: red;
     }
 
-    &-degree {
+    &-company {
       color: red;
     }
 
