--- a/src/Pages/Explore/explore.module.scss
+++ b/src/Pages/Explore/explore.module.scss
@@ -10,9 +10,18 @@
 
     &-list {
       margin-top: 20px;
+      width: 100%;
+      text-align: center;
+    }
+
+    &-preloader {
+      margin-top: 30px;
+      max-width: 30%;
     }
 
     &-li {
+      width: 100%;
+      text-align: left;
       margin-bottom: 30px;
       border: 1px solid rgb(233, 233, 233);
       background: white;
@@ -53,7 +62,7 @@
     }
 
     &-btn {
-      padding: 8px 60px;
+      padding: 8px 40px;
       border: none;
       transition: .3s;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
