--- a/src/Pages/Profile/profile.module.scss
+++ b/src/Pages/Profile/profile.module.scss
@@ -83,8 +83,9 @@
     }
   }
 
+
   &__experiences {
-    margin-top: 20px;
+    margin-top: 20px;    
 
     &-item {
       border: 1px solid rgb(211, 210, 210);
@@ -118,7 +119,37 @@
 
       &-title {
         font-size: 25px;
+      }      
+    }
+
+    &__list {
+  
+      &-li {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 20px;
+        border-bottom: 1px solid rgb(216, 213, 213);
       }
+  
+      &-info {
+        text-align: left;
+      }
+  
+      &-text {
+        margin-top: 5px;
+        span {
+          font-weight: bold;
+        }
+      }
+  
+      &-status {
+        color: red;
+      }
+  
+      &-company {
+        color: red;
+      }      
     }
   }
 
@@ -158,6 +189,36 @@
       &-title {
         font-size: 25px;
       }
+    }
+
+    &__list {
+  
+      &-li {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 20px;
+        border-bottom: 1px solid rgb(216, 213, 213);
+      }
+  
+      &-info {
+        text-align: left;
+      }
+  
+      &-text {
+        margin-top: 5px;
+        span {
+          font-weight: bold;
+        }
+      }
+  
+      &-status {
+        color: red;
+      }
+  
+      &-company {
+        color: red;
+      }      
     }
   }
 
