--- a/src/Pages/Profile/profile.module.scss
+++ b/src/Pages/Profile/profile.module.scss
@@ -49,6 +49,17 @@
       min-width: 200px;
     }
 
+    &-li {
+      margin-top: 10px;      
+    }
+
+    &-text {
+      & > span {
+        font-weight: bold;
+        color: rgb(30, 121, 52);
+      }
+    }
+
     &-imgBox {
       width: 200px;
       height: 200px;
@@ -81,6 +92,20 @@
         background: rgb(236, 112, 112);
       }
     }
+
+    &-links {
+      color: black;
+      text-decoration: none;
+      transition: .3s;
+      
+      & > i {
+        color: rgb(21, 119, 119);
+      }
+
+      &:hover {
+        color: red;
+      }
+    }   
   }
 
 
