proyekt tugatildi. test qilish qoldi

--- a/src/Components/Git/git.module.scss
+++ b/src/Components/Git/git.module.scss
@@ -16,6 +16,13 @@
       flex-direction: column;
       gap: 5px;
       color: black;
+
+      
+    }
+
+    &-infoSpan {
+      font-weight: bold;
+      color: rgb(110, 140, 196);
     }
 
     &-title {
