--- a/src/Components/AfterProfile/afterprofile.module.scss
+++ b/src/Components/AfterProfile/afterprofile.module.scss
@@ -60,16 +60,40 @@
       min-width: 200px;
     }
 
+    &-li {
+      margin-left: 30px;
+    }
+
+    &-text {
+      max-width: 350px;
+      & > span {
+        font-weight: bold;
+        color: rgb(33, 245, 26);
+      }
+    }
+
+    &-textBox {
+      margin-left: 10px;
+      display: inline-block;
+      font-weight: 400;
+      & > i {
+        color: blue;
+      }
+    }
+
     &-imgBox {
-      width: 200px;
-      height: 200px;
+      min-width: 200px;
+      max-width: 220px;
+      min-height: 200px;
+      max-height: 220px;
       border-radius: 50%;
       overflow: hidden;
+      box-shadow: 0 0 5px #1a67be;
     }
 
     &-img {
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
     }
 
     &-btn {
