--- a/src/Pages/EditProfile/editprofile.module.scss
+++ b/src/Pages/EditProfile/editprofile.module.scss
@@ -1,21 +1,21 @@
 .editprofile {
   margin-top: 20px;
   min-height: calc(100vh - 100px);
-  
+
   &__content {
     padding-bottom: 30px;
 
-    &-buttonsX {
+    &-buttonsBack {
+      width: 300px;
       margin: 30px 0 20px;
       display: flex;
       align-items: center;
-      width: 300px;
     }
 
-    &-btnX {
+    &-btnBack {
       padding: 8px 16px;
       border-radius: 5px;
-      color: rgb(255, 255, 255);
+      color: white;
       background: rgb(228, 81, 81);
       border: none;
       font-size: 18px;
@@ -34,7 +34,7 @@
     &-formTop {
       display: flex;
       align-items: center;
-      gap: 20px;      
+      gap: 20px;
     }
 
     &-formBottom {
@@ -73,7 +73,7 @@
       border: none;
       transition: .3s;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #9c4c4c;
+      background: rgb(228, 81, 81);
       font-size: 18px;
       color: white;
       border-radius: 5px;
