--- a/src/Pages/Profile/profile.module.scss
+++ b/src/Pages/Profile/profile.module.scss
@@ -47,6 +47,7 @@
 
     &-list {
       min-width: 200px;
+      margin-left: 20px;
     }
 
     &-li {
@@ -57,19 +58,22 @@
       & > span {
         font-weight: bold;
         color: rgb(30, 121, 52);
+        max-width: 320px;
       }
     }
 
     &-imgBox {
-      width: 200px;
-      height: 200px;
+      min-width: 200px;
+      max-width: 220px;
+      min-height: 200px;
+      max-height: 220px;
       border-radius: 50%;
       overflow: hidden;
     }
 
     &-img {
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
     }
 
     &-btn {
