--- a/src/Components/Header/header.module.scss
+++ b/src/Components/Header/header.module.scss
@@ -3,7 +3,7 @@
   padding: 10px 0;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.555);
   background: white;
-  
+
   &__nav {
     display: flex;
     align-items: center;
@@ -13,6 +13,32 @@
       color: red;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       font-size: 40px;
-    }    
+    }
+
+    &-buttons {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 30px;
+      width: 450px;
+    }
+
+    &-btn {
+      background: rgb(39, 82, 175);
+      border: none;
+      width: 30px;
+      height: 30px;
+      box-shadow: 0 0 10px black;
+      border-radius: 50%;
+      cursor: pointer;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: white;
+      font-weight: 700;
+      transition: .3s;
+
+      &:hover {
+      background: rgb(118, 216, 105);
+      }
+    }
   }
 }
