--- a/src/Pages/Home/home.module.scss
+++ b/src/Pages/Home/home.module.scss
@@ -45,7 +45,9 @@
 
     &-btn {
       color: white;
-      // background: rgb(107, 21, 21);
+      width: 200px;
+      text-align: center;
+      background: #0000009d;
       border: 1px solid white;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       padding: 8px 16px;
